--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -51,10 +51,11 @@ jobs:
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: base
           plugin_steam: yes
+          plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
           plugin_steam_achievements_limit: 2
           plugin_steam_games_limit: 1
           plugin_steam_playtime_threshold: 2
           plugin_steam_recent_games_limit: 1
           plugin_steam_sections: player, most-played, recently-played
-          plugin_steam_user: Kur0shite
+          plugin_steam_user: "76561198124900817"
           plugin_traffic: yes
